--- a/src/components/discovery-tile-result/discovery-tile-result.scss
+++ b/src/components/discovery-tile-result/discovery-tile-result.scss
@@ -25,7 +25,6 @@
       flex-grow: 4;
       cursor: auto;
       text-align: left;
-      overflow: hidden;
     }
   }
 }
